Updated with product images

--- a/index.html
+++ b/index.html
@@ -69,19 +69,18 @@
   <section>
     <h2>New Arrivals</h2>
     <div class="grid">
-      <img src="https://via.placeholder.com/300x400" alt="New Dress 1">
-      <img src="https://via.placeholder.com/300x400" alt="New Dress 2">
-      <img src="https://via.placeholder.com/300x400" alt="New Dress 3">
-      <img src="https://via.placeholder.com/300x400" alt="New Dress 4">
+      <img src="renamed_images/poshaakh1.webp" alt="Pink Embroidered Suit">
+      <img src="renamed_images/poshaakh2.webp" alt="Lavender Embroidered Suit">
+      <img src="renamed_images/poshaakh3.webp" alt="Maroon Embroidered Suit">
     </div>
   </section>
 
   <section>
     <h2>Best Sellers</h2>
     <div class="grid">
-      <img src="https://via.placeholder.com/300x400" alt="Best Seller 1">
-      <img src="https://via.placeholder.com/300x400" alt="Best Seller 2">
-      <img src="https://via.placeholder.com/300x400" alt="Best Seller 3">
+      <img src="renamed_images/poshaakh4.webp" alt="Kids Red Suit">
+      <img src="renamed_images/poshaakh5.webp" alt="Kids Green Suit">
+      <img src="renamed_images/poshaakh6.webp" alt="Black & Gold Suit">
     </div>
   </section>
 
