final working version

--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
   <section>
     <h2>New Arrivals</h2>
     <div class="grid">
-      <img src="renamed_images/poshaakh1.webp" alt="Pink Embroidered Suit">
-      <img src="renamed_images/poshaakh2.webp" alt="Lavender Embroidered Suit">
-      <img src="renamed_images/poshaakh3.webp" alt="Maroon Embroidered Suit">
+      <img src="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" alt="Pink Embroidered Suit">
+      <img src="https://poshaakh.github.io/Poshaakh/poshaakh2.webp" alt="Lavender Embroidered Suit">
+      <img src="https://poshaakh.github.io/Poshaakh/poshaakh3.webp" alt="Maroon Embroidered Suit">
     </div>
   </section>
 
   <section>
     <h2>Best Sellers</h2>
     <div class="grid">
-      <img src="renamed_images/poshaakh4.webp" alt="Kids Red Suit">
-      <img src="renamed_images/poshaakh5.webp" alt="Kids Green Suit">
-      <img src="renamed_images/poshaakh6.webp" alt="Black & Gold Suit">
+      <img src="https://poshaakh.github.io/Poshaakh/poshaakh4.webp" alt="Kids Red Suit">
+      <img src="https://poshaakh.github.io/Poshaakh/poshaakh5.webp" alt="Kids Green Suit">
+      <img src="https://poshaakh.github.io/Poshaakh/poshaakh6.webp" alt="Black & Gold Suit">
     </div>
   </section>
 
@@ -105,7 +105,7 @@
 
   <footer>
     <p>&copy; 2025 Poshaakh</p>
-    <p>Made with &hearts; in India</p>
+    <p>Made with ♥ in India</p>
   </footer>
 
 </body>
