--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
   <header>
     <h1>Poshaakh</h1>
     <p>Grace in Every Thread</p>
-    <a class="btn" href="https://instagram.com/designsbyposhaakh" target="_blank">Shop Now</a>
+    <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now</a>
   </header>
 
   <section>
     <h2>New Arrivals</h2>
     <div class="grid">
-      <img src="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" alt="Pink Embroidered Suit">
-      <img src="https://poshaakh.github.io/Poshaakh/poshaakh2.webp" alt="Lavender Embroidered Suit">
-      <img src="https://poshaakh.github.io/Poshaakh/poshaakh3.webp" alt="Maroon Embroidered Suit">
+      <img src="poshaakh1.webp" alt="Pink Embroidered Suit">
+      <img src="poshaakh2.webp" alt="Lavender Embroidered Suit">
+      <img src="poshaakh3.webp" alt="Maroon Embroidered Suit">
     </div>
   </section>
 
   <section>
     <h2>Best Sellers</h2>
     <div class="grid">
-      <img src="https://poshaakh.github.io/Poshaakh/poshaakh4.webp" alt="Kids Red Suit">
-      <img src="https://poshaakh.github.io/Poshaakh/poshaakh5.webp" alt="Kids Green Suit">
-      <img src="https://poshaakh.github.io/Poshaakh/poshaakh6.webp" alt="Black & Gold Suit">
+      <img src="poshaakh4.webp" alt="Kids Red Suit">
+      <img src="poshaakh5.webp" alt="Kids Green Suit">
+      <img src="poshaakh6.webp" alt="Black & Gold Suit">
     </div>
   </section>
 
@@ -98,14 +98,14 @@
   <section>
     <h2>Order Now</h2>
     <div class="cta-buttons">
-      <a class="btn" href="https://wa.me/919999999999" target="_blank">Order on WhatsApp</a>
+      <a class="btn" href="https://wa.me/919892218187" target="_blank">Order on WhatsApp</a>
       <a class="btn" href="https://instagram.com/designsbyposhaakh" target="_blank">Visit Instagram</a>
     </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Poshaakh</p>
-    <p>Made with ♥ in India</p>
+    <p>Made with &hearts; in India</p>
   </footer>
 
 </body>
