--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       text-align: center;
       padding: 2rem 1rem;
     }
+    header img {
+      max-width: 150px;
+      margin-bottom: 1rem;
+    }
     header h1 {
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
@@ -61,6 +65,7 @@
 <body>
 
   <header>
+    <img src="logo.png" alt="Poshaakh Logo">
     <h1>Poshaakh</h1>
     <p>Grace in Every Thread</p>
     <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now</a>
