--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 
   <header>
     <img src="logo.png" alt="Poshaakh Logo">
-    <h1>Poshaakh</h1>
-    <p>Grace in Every Thread</p>
-    <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now</a>
+        <div style="display: flex; flex-direction: column; align-items: center; gap: 0.75rem;">
+      <p style="margin: 0;">Grace in Every Thread</p>
+      <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now</a>
+    </div>
   </header>
 
   <section>
