--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Poshaakh - Grace in Every Thread</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
   <style>
     html {
       scroll-behavior: smooth;
     }
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       background-color: white;
       color: #d63384;
       animation: fadeInBody 1s ease-in;
+    }
+    h1, h2 {
+      font-family: 'Playfair Display', serif;
     }
     @keyframes fadeInBody {
       from { opacity: 0; }
@@ -22,6 +26,7 @@
     header, footer {
       text-align: center;
       padding: 2rem 1rem;
+      background: linear-gradient(to bottom, #fff0f5, #ffffff);
     }
     header img {
       max-width: 150px;
@@ -73,6 +78,20 @@
       max-width: 800px;
       margin: 0 auto;
     }
+    .testimonial-slider {
+      overflow: hidden;
+      white-space: nowrap;
+      animation: scroll 20s linear infinite;
+    }
+    .testimonial-slider p {
+      display: inline-block;
+      margin: 0 2rem;
+      font-style: italic;
+    }
+    @keyframes scroll {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
     footer p {
       margin: 0.25rem 0;
       font-size: 0.95rem;
@@ -117,8 +136,11 @@
 
   <section class="testimonials">
     <h2>What Our Customers Say</h2>
-    <p>"Loved the quality!" – Ayesha R.</p>
-    <p>"Exactly like the photo. Got so many compliments!" – Meenal S.</p>
+    <div class="testimonial-slider">
+      <p>"Loved the quality!" – Ayesha R.</p>
+      <p>"Exactly like the photo. Got so many compliments!" – Meenal S.</p>
+      <p>"Fits perfectly. Great customer service too!" – Rina P.</p>
+    </div>
   </section>
 
   <section>
@@ -133,6 +155,11 @@
     <p>&copy; 2025 Poshaakh</p>
     <p>Made with &hearts; in India</p>
   </footer>
+
+  <!-- Floating WhatsApp Button -->
+  <a href="https://wa.me/919892218187" target="_blank" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+    <img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="Chat on WhatsApp">
+  </a>
 
 </body>
 </html>
