--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
   <footer>
     <p>&copy; 2025 Poshaakh</p>
     <p>Made with &hearts; in India</p>
+    <p style="margin-top: 1rem;">
+      Shop no-9, PEARL PLATINUM, Oshiwara Garden Road, Chandiwala,<br>
+      Mumbai, Maharashtra 400102, India
+    </p>
   </footer>
 
   <!-- Floating WhatsApp Button -->
