--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
     <p>&copy; 2025 Poshaakh</p>
     <p>Made with &hearts; in India</p>
     <p style="margin-top: 1rem;">
-      Shop no-9, PEARL PLATINUM, Oshiwara Garden Road, Chandiwala,<br>
-      Mumbai, Maharashtra 400102, India
+      Shop no-9, PEARL PLATINUM, Oshiwara Garden Road,<br>
+      Chandiwala, Mumbai, Maharashtra 400102, India
     </p>
   </footer>
 
