--- a/index.html
+++ b/index.html
@@ -155,8 +155,12 @@
     <p>&copy; 2025 Poshaakh</p>
     <p>Made with &hearts; in India</p>
     <p style="margin-top: 1rem;">
-      Shop no-9, PEARL PLATINUM, Oshiwara Garden Road,<br>
-      Chandiwala, Mumbai, Maharashtra 400102, India
+      <a href="https://www.google.com/maps?q=Shop+no-9,+PEARL+PLATINUM,+Oshiwara+Garden+Road,+Chandiwala,+Mumbai,+Maharashtra+400102,+India" 
+         target="_blank" 
+         style="color: #d63384; text-decoration: none;">
+        📍 Shop no-9, PEARL PLATINUM, Oshiwara Garden Road,<br>
+        Chandiwala, Mumbai, Maharashtra 400102, India
+      </a>
     </p>
   </footer>
 
