--- a/index.html
+++ b/index.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari, Mumbai</title>
-
-  <!-- SEO Meta -->
-  <meta name="description" content="Shop original Lucknowi Chikankari suits, kurtis & ethnic wear at Poshaakh, Jogeshwari. Authentic handcrafted fashion delivered across Mumbai & India.">
-  <meta name="keywords" content="Lucknowi kurtis Jogeshwari, Chikankari suits Mumbai, ethnic wear Jogeshwari, Poshaakh suits, traditional Indian clothing, handmade kurtis near me">
-  <meta name="author" content="Poshaakh">
-
-  <!-- Local Business Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ClothingStore",
-    "name": "Poshaakh",
-    "image": "https://poshaakh.github.io/Poshaakh/poshaakh1.webp",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Shop no-9, PEARL PLATINUM, Oshiwara Garden Road, Chandiwala",
-      "addressLocality": "Jogeshwari",
-      "addressRegion": "MH",
-      "postalCode": "400102",
-      "addressCountry": "IN"
-    },
-    "url": "https://poshaakh.github.io/Poshaakh/",
-    "telephone": "+91-9892218187"
-  }
-  </script>
-
-  <!-- Open Graph (for Facebook, LinkedIn) -->
-  <meta property="og:title" content="Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari, Mumbai" />
-  <meta property="og:description" content="Explore traditional handcrafted Lucknowi suits & kurtis at Poshaakh, Jogeshwari West. WhatsApp to order or visit us in Mumbai." />
-  <meta property="og:image" content="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" />
-  <meta property="og:url" content="https://poshaakh.github.io/Poshaakh/" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari" />
-  <meta name="twitter:description" content="Handmade elegance in every thread – shop Poshaakh for Chikankari suits & kurtis in Mumbai." />
-  <meta name="twitter:image" content="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" />
-
-  <!-- Fonts -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="h6Sq2yKtZZEatlTnKMpsbzEQhGUd131jxEx2g1I-iLw" />
+  <title>Poshaakh - Grace in Every Thread</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
-  
-  <!-- Favicon -->
-  <link rel="icon" href="logo.png" type="image/png" />
-
   <style>
     html {
       scroll-behavior: smooth;
@@ -149,62 +105,62 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Poshaakh Logo – Lucknowi Suits in Jogeshwari">
+    <img src="logo.png" alt="Poshaakh Logo">
     <div style="display: flex; flex-direction: column; align-items: center; gap: 0.75rem;">
-      <p style="margin: 0;">Grace in Every Thread – Now in Jogeshwari</p>
-      <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now on WhatsApp</a>
+      <p style="margin: 0;">Grace in Every Thread</p>
+      <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now</a>
     </div>
   </header>
 
   <section>
-    <h2>New Arrivals – Lucknowi Chikankari Suits</h2>
+    <h2>New Arrivals</h2>
     <div class="grid">
-      <img src="poshaakh1.webp" alt="Pink Lucknowi Suit in Jogeshwari">
-      <img src="poshaakh2.webp" alt="Lavender Chikankari Kurti Mumbai">
-      <img src="poshaakh3.webp" alt="Maroon Embroidered Suit near Jogeshwari">
+      <img src="poshaakh1.webp" alt="Pink Embroidered Suit">
+      <img src="poshaakh2.webp" alt="Lavender Embroidered Suit">
+      <img src="poshaakh3.webp" alt="Maroon Embroidered Suit">
     </div>
   </section>
 
   <section>
-    <h2>Best Sellers – Traditional Suits & Kurtis</h2>
+    <h2>Best Sellers</h2>
     <div class="grid">
-      <img src="poshaakh4.webp" alt="Kids Red Embroidered Suit Mumbai">
-      <img src="poshaakh5.webp" alt="Kids Green Chikankari Suit Jogeshwari">
-      <img src="poshaakh6.webp" alt="Black Gold Suit for Festival Wear Mumbai">
+      <img src="poshaakh4.webp" alt="Kids Red Suit">
+      <img src="poshaakh5.webp" alt="Kids Green Suit">
+      <img src="poshaakh6.webp" alt="Black & Gold Suit">
     </div>
   </section>
 
   <section class="about">
-    <h2>About Poshaakh – Ethnic Boutique in Jogeshwari</h2>
-    <p>Located in the heart of Jogeshwari, Mumbai, Poshaakh is your go-to for elegant Lucknowi and Chikankari wear. Every piece is handcrafted to reflect Indian grace, tradition, and luxury.</p>
+    <h2>About Poshaakh</h2>
+    <p>At Poshaakh, we believe clothing is more than fabric — it's identity, elegance, and empowerment. Every piece is designed to make you feel confident and graceful.</p>
   </section>
 
   <section class="testimonials">
-    <h2>Customer Reviews</h2>
+    <h2>What Our Customers Say</h2>
     <div class="testimonial-slider">
-      <p>"Beautiful Lucknowi work. Great shop in Jogeshwari!" – Ayesha R.</p>
-      <p>"Exactly like the photo. Fast delivery in Mumbai!" – Meenal S.</p>
-      <p>"Fits perfectly. Amazing stitching!" – Rina P.</p>
+      <p>"Loved the quality!" – Ayesha R.</p>
+      <p>"Exactly like the photo. Got so many compliments!" – Meenal S.</p>
+      <p>"Fits perfectly. Great customer service too!" – Rina P.</p>
     </div>
   </section>
 
   <section>
-    <h2>Visit or Order Online</h2>
+    <h2>Order Now</h2>
     <div class="cta-buttons">
       <a class="btn" href="https://wa.me/919892218187" target="_blank">Order on WhatsApp</a>
-      <a class="btn" href="https://instagram.com/designsbyposhaakh" target="_blank">Follow on Instagram</a>
+      <a class="btn" href="https://instagram.com/designsbyposhaakh" target="_blank">Visit Instagram</a>
     </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Poshaakh</p>
-    <p>Made with ♥ in Jogeshwari, Mumbai</p>
+    <p>Made with &hearts; in India</p>
     <p style="margin-top: 1rem;">
       <a href="https://www.google.com/maps?q=Shop+no-9,+PEARL+PLATINUM,+Oshiwara+Garden+Road,+Chandiwala,+Mumbai,+Maharashtra+400102,+India" 
          target="_blank" 
          style="color: #d63384; text-decoration: none;">
         📍 Shop no-9, PEARL PLATINUM, Oshiwara Garden Road,<br>
-        Chandiwala, Jogeshwari West, Mumbai – 400102
+        Chandiwala, Mumbai, Maharashtra 400102, India
       </a>
     </p>
   </footer>
