--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta name="google-site-verification" content="h6Sq2yKtZZEatlTnKMpsbzEQhGUd131jxEx2g1I-iLw" />
- <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="h6Sq2yKtZZEatlTnKMpsbzEQhGUd131jxEx2g1I-iLw" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <title>Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari, Mumbai</title>
 
   <!-- SEO Meta -->
   <meta name="description" content="Shop original Lucknowi Chikankari suits, kurtis & ethnic wear at Poshaakh, Jogeshwari. Authentic handcrafted fashion delivered across Mumbai & India.">
-  <meta name="keywords" content="Lucknowi kurtis Jogeshwari, Chikankari suits Mumbai, ethnic wear Jogeshwari, Poshaakh suits, traditional Indian clothing, handmade kurtis near me">
+  <meta name="keywords" content="Lucknowi kurtis Jogeshwari, Chikankari suits Mumbai, ethnic wear Jogeshwari, Poshaakh suits, traditional Indian clothing, handmade kurtis near me, boutique near Andheri West, Chikankari Mumbai shop, buy ethnic suits Jogeshwari, Poshaakh Jogeshwari boutique">
   <meta name="author" content="Poshaakh">
+
+  <!-- Local Targeting Meta -->
+  <meta name="geo.region" content="IN-MH" />
+  <meta name="geo.placename" content="Jogeshwari, Mumbai" />
+  <meta name="geo.position" content="19.1403;72.8424" />
+  <meta name="ICBM" content="19.1403, 72.8424" />
 
   <!-- Local Business Schema -->
   <script type="application/ld+json">
@@ -28,7 +34,18 @@
       "addressCountry": "IN"
     },
     "url": "https://poshaakh.github.io/Poshaakh/",
-    "telephone": "+91-9892218187"
+    "telephone": "+91-9892218187",
+    "openingHours": "Mo-Su 11:00-21:00",
+    "priceRange": "₹₹",
+    "sameAs": [
+      "https://instagram.com/designsbyposhaakh",
+      "https://wa.me/919892218187"
+    ],
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "19.1403",
+      "longitude": "72.8424"
+    }
   }
   </script>
 
@@ -52,9 +69,7 @@
   <link rel="icon" href="logo.png" type="image/png" />
 
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -62,9 +77,7 @@
       color: #d63384;
       animation: fadeInBody 1s ease-in;
     }
-    h1, h2 {
-      font-family: 'Playfair Display', serif;
-    }
+    h1, h2 { font-family: 'Playfair Display', serif; }
     @keyframes fadeInBody {
       from { opacity: 0; }
       to { opacity: 1; }
@@ -83,10 +96,7 @@
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    header p {
-      font-size: 1.2rem;
-      margin-bottom: 1rem;
-    }
+    header p { font-size: 1.2rem; margin-bottom: 1rem; }
     .btn {
       background-color: #d63384;
       color: white;
@@ -96,9 +106,7 @@
       font-weight: bold;
       transition: background-color 0.3s ease;
     }
-    .btn:hover {
-      background-color: #b91d6e;
-    }
+    .btn:hover { background-color: #b91d6e; }
     section {
       padding: 2rem 1rem;
       text-align: center;
@@ -206,6 +214,13 @@
          style="color: #d63384; text-decoration: none;">
         📍 Shop no-9, PEARL PLATINUM, Oshiwara Garden Road,<br>
         Chandiwala, Jogeshwari West, Mumbai – 400102
+      </a>
+    </p>
+    <p>
+      <a href="https://www.google.com/search?q=Poshaakh+Jogeshwari&ludocid=YOUR_PLACE_ID#lrd=0x0:0x0,1" 
+         target="_blank" 
+         style="color: #d63384; text-decoration: none;">
+        ⭐ Leave us a Google Review
       </a>
     </p>
   </footer>
