--- a/index.html
+++ b/index.html
@@ -189,13 +189,20 @@
   </section>
 
   <section class="testimonials">
-    <h2>Customer Reviews</h2>
-    <div class="testimonial-slider">
-      <p>"Beautiful Lucknowi work. Great shop in Jogeshwari!" – Ayesha R.</p>
-      <p>"Exactly like the photo. Fast delivery in Mumbai!" – Meenal S.</p>
-      <p>"Fits perfectly. Amazing stitching!" – Rina P.</p>
-    </div>
-  </section>
+  <h2>Customer Reviews</h2>
+  <div class="review">
+    <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
+    <strong>– Ayesha R.</strong>
+  </div>
+  <div class="review">
+    <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
+    <strong>– Meenal S.</strong>
+  </div>
+  <div class="review">
+    <p>“Fits perfectly. Amazing stitching!”</p>
+    <strong>– Rina P.</strong>
+  </div>
+</section>
 
   <section>
     <h2>Visit or Order Online</h2>
