--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     "@context": "https://schema.org",
     "@type": "ClothingStore",
     "name": "Poshaakh",
-    "image": "https://poshaakh.github.io/Poshaakh/poshaakh1.webp",
+    "image": "https://poshaakh.github.io/Poshaakh/lucknowi-kurtis-jogeshwari-poshaakh.jpg1.jpg",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Shop no-9, PEARL PLATINUM, Oshiwara Garden Road, Chandiwala",
@@ -52,7 +52,7 @@
   <!-- Open Graph (for Facebook, LinkedIn) -->
   <meta property="og:title" content="Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari, Mumbai" />
   <meta property="og:description" content="Explore traditional handcrafted Lucknowi suits & kurtis at Poshaakh, Jogeshwari West. WhatsApp to order or visit us in Mumbai." />
-  <meta property="og:image" content="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" />
+  <meta property="og:image" content="https://poshaakh.github.io/Poshaakh/lucknowi-kurtis-jogeshwari-poshaakh.jpg1.jpg" />
   <meta property="og:url" content="https://poshaakh.github.io/Poshaakh/" />
   <meta property="og:type" content="website" />
 
@@ -60,7 +60,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari" />
   <meta name="twitter:description" content="Handmade elegance in every thread – shop Poshaakh for Chikankari suits & kurtis in Mumbai." />
-  <meta name="twitter:image" content="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" />
+  <meta name="twitter:image" content="https://poshaakh.github.io/Poshaakh/lucknowi-kurtis-jogeshwari-poshaakh.jpg1.jpg" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
@@ -168,8 +168,8 @@
   <section>
     <h2>New Arrivals – Lucknowi Chikankari Suits</h2>
     <div class="grid">
-      <img src="poshaakh1.webp" alt="Pink Lucknowi Suit in Jogeshwari">
-      <img src="poshaakh2.webp" alt="Lavender Chikankari Kurti Mumbai">
+      <img src="lucknowi-kurtis-jogeshwari-poshaakh.jpg1.jpg" alt="Pink Lucknowi Suit in Jogeshwari">
+      <img src="lucknowi-kurtis-jogeshwari-poshaakh.jpg" alt="Lavender Chikankari Kurti Mumbai">
       <img src="poshaakh3.webp" alt="Maroon Embroidered Suit near Jogeshwari">
     </div>
   </section>
@@ -189,20 +189,20 @@
   </section>
 
   <section class="testimonials">
-  <h2>Customer Reviews</h2>
-  <div class="review">
-    <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
-    <strong>– Ayesha R.</strong>
-  </div>
-  <div class="review">
-    <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
-    <strong>– Meenal S.</strong>
-  </div>
-  <div class="review">
-    <p>“Fits perfectly. Amazing stitching!”</p>
-    <strong>– Rina P.</strong>
-  </div>
-</section>
+    <h2>Customer Reviews</h2>
+    <div class="review">
+      <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
+      <strong>– Ayesha R.</strong>
+    </div>
+    <div class="review">
+      <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
+      <strong>– Meenal S.</strong>
+    </div>
+    <div class="review">
+      <p>“Fits perfectly. Amazing stitching!”</p>
+      <strong>– Rina P.</strong>
+    </div>
+  </section>
 
   <section>
     <h2>Visit or Order Online</h2>
