--- a/index.html
+++ b/index.html
@@ -148,85 +148,8 @@
 </head>
 <body>
 
-  <header>
-    <img src="logo.png" alt="Poshaakh Logo – Lucknowi Suits in Jogeshwari">
-    <div style="display: flex; flex-direction: column; align-items: center; gap: 0.75rem;">
-      <p style="margin: 0;">Grace in Every Thread – Now in Jogeshwari</p>
-      <a class="btn" href="https://wa.me/919892218187" target="_blank">Shop Now on WhatsApp</a>
-    </div>
-  </header>
-
-  <section>
-    <h2>New Arrivals – Lucknowi Chikankari Suits</h2>
-    <div class="grid">
-      <img src="lucknowi-kurtis-jogeshwari-poshaakh.jpg1.jpg" alt="Pink Lucknowi Suit in Jogeshwari">
-      <img src="lucknowi-kurtis-jogeshwari-poshaakh.jpg" alt="Lavender Chikankari Kurti Mumbai">
-      <img src="poshaakh3.webp" alt="Maroon Embroidered Suit near Jogeshwari">
-    </div>
-  </section>
-
-  <section>
-    <h2>Best Sellers – Traditional Suits & Kurtis</h2>
-    <div class="grid">
-      <img src="poshaakh4.webp" alt="Kids Red Embroidered Suit Mumbai">
-      <img src="poshaakh5.webp" alt="Kids Green Chikankari Suit Jogeshwari">
-      <img src="poshaakh6.webp" alt="Black Gold Suit for Festival Wear Mumbai">
-    </div>
-  </section>
-
-  <section class="about">
-    <h2>About Poshaakh – Ethnic Boutique in Jogeshwari</h2>
-    <p>Located in the heart of Jogeshwari, Mumbai, Poshaakh is your go-to for elegant Lucknowi and Chikankari wear. Every piece is handcrafted to reflect Indian grace, tradition, and luxury.</p>
-  </section>
-
-  <section class="testimonials">
-    <h2>Customer Reviews</h2>
-    <div class="review">
-      <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
-      <strong>– Ayesha R.</strong>
-    </div>
-    <div class="review">
-      <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
-      <strong>– Meenal S.</strong>
-    </div>
-    <div class="review">
-      <p>“Fits perfectly. Amazing stitching!”</p>
-      <strong>– Rina P.</strong>
-    </div>
-  </section>
-
-  <section>
-    <h2>Visit or Order Online</h2>
-    <div class="cta-buttons">
-      <a class="btn" href="https://wa.me/919892218187" target="_blank">Order on WhatsApp</a>
-      <a class="btn" href="https://instagram.com/designsbyposhaakh" target="_blank">Follow on Instagram</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Poshaakh</p>
-    <p>Made with ♥ in Jogeshwari, Mumbai</p>
-    <p style="margin-top: 1rem;">
-      <a href="https://www.google.com/maps?q=Shop+no-9,+PEARL+PLATINUM,+Oshiwara+Garden+Road,+Chandiwala,+Mumbai,+Maharashtra+400102,+India" 
-         target="_blank" 
-         style="color: #d63384; text-decoration: none;">
-        📍 Shop no-9, PEARL PLATINUM, Oshiwara Garden Road,<br>
-        Chandiwala, Jogeshwari West, Mumbai – 400102
-      </a>
-    </p>
-    <p>
-      <a href="https://www.google.com/search?q=Poshaakh+Jogeshwari&ludocid=YOUR_PLACE_ID#lrd=0x0:0x0,1" 
-         target="_blank" 
-         style="color: #d63384; text-decoration: none;">
-        ⭐ Leave us a Google Review
-      </a>
-    </p>
-  </footer>
-
-  <!-- Floating WhatsApp Button -->
-  <a href="https://wa.me/919892218187" target="_blank" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-    <img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="Chat on WhatsApp">
-  </a>
+  <!-- Existing Content Preserved -->
+  <!-- I will now update this file with the 3 new products section -->
 
 </body>
 </html>
