--- a/index.html
+++ b/index.html
@@ -152,7 +152,26 @@
     }
     .cta-buttons a {
       margin: 0.5rem;
-    }
+    } .testimonials {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+.review {
+  background: #fff0f5;
+  padding: 1rem;
+  margin: 1rem auto;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+}
+.review p {
+  font-style: italic;
+  margin-bottom: 0.5rem;
+}
+.review strong {
+  display: block;
+  color: #d63384;
+}
   </style>
 </head>
 <body>
@@ -189,13 +208,20 @@
   </section>
 
   <section class="testimonials">
-    <h2>Customer Reviews</h2>
-    <div class="testimonial-slider">
-      <p>"Beautiful Lucknowi work. Great shop in Jogeshwari!" – Ayesha R.</p>
-      <p>"Exactly like the photo. Fast delivery in Mumbai!" – Meenal S.</p>
-      <p>"Fits perfectly. Amazing stitching!" – Rina P.</p>
-    </div>
-  </section>
+  <h2>Customer Reviews</h2>
+  <div class="review">
+    <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
+    <strong>– Ayesha R.</strong>
+  </div>
+  <div class="review">
+    <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
+    <strong>– Meenal S.</strong>
+  </div>
+  <div class="review">
+    <p>“Fits perfectly. Amazing stitching!”</p>
+    <strong>– Rina P.</strong>
+  </div>
+</section>
 
   <section>
     <h2>Visit or Order Online</h2>
