--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   }
   </script>
 
-  <!-- Open Graph (for Facebook, LinkedIn) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Poshaakh – Lucknowi & Chikankari Suits in Jogeshwari, Mumbai" />
   <meta property="og:description" content="Explore traditional handcrafted Lucknowi suits & kurtis at Poshaakh, Jogeshwari West. WhatsApp to order or visit us in Mumbai." />
   <meta property="og:image" content="https://poshaakh.github.io/Poshaakh/poshaakh1.webp" />
@@ -128,6 +128,14 @@
       transform: scale(1.05);
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
+    .grid p {
+      margin-top: 0.5rem;
+      font-size: 0.95rem;
+      color: #444;
+    }
+    .grid strong {
+      color: #d63384;
+    }
     .about, .testimonials {
       max-width: 800px;
       margin: 0 auto;
@@ -152,26 +160,27 @@
     }
     .cta-buttons a {
       margin: 0.5rem;
-    } .testimonials {
-  max-width: 600px;
-  margin: 0 auto;
-  text-align: center;
-}
-.review {
-  background: #fff0f5;
-  padding: 1rem;
-  margin: 1rem auto;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-}
-.review p {
-  font-style: italic;
-  margin-bottom: 0.5rem;
-}
-.review strong {
-  display: block;
-  color: #d63384;
-}
+    }
+    .testimonials {
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .review {
+      background: #fff0f5;
+      padding: 1rem;
+      margin: 1rem auto;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    .review p {
+      font-style: italic;
+      margin-bottom: 0.5rem;
+    }
+    .review strong {
+      display: block;
+      color: #d63384;
+    }
   </style>
 </head>
 <body>
@@ -187,18 +196,48 @@
   <section>
     <h2>New Arrivals – Lucknowi Chikankari Suits</h2>
     <div class="grid">
-      <img src="poshaakh1.webp" alt="Pink Lucknowi Suit in Jogeshwari">
-      <img src="poshaakh2.webp" alt="Lavender Chikankari Kurti Mumbai">
-      <img src="poshaakh3.webp" alt="Maroon Embroidered Suit near Jogeshwari">
+      <div>
+        <img src="kurti1.png" alt="Pure Lucknowi Viscose Chikan Kurti Red">
+        <p><strong>Pure Lucknowi Viscose Chikan Kurti (Red)</strong><br>₹2,950</p>
+      </div>
+      <div>
+        <img src="set1.jpg" alt="Satin 3D Suit Chikankari Lucknowi">
+        <p><strong>Satin 3D Suit Chikankari Lucknowi</strong><br>₹3,200</p>
+      </div>
+      <div>
+        <img src="bridal1.png" alt="Heavy Bridal Gharara Full Set Hand Embroidery">
+        <p><strong>Bridal Gharara Full Set – Hand Embroidered</strong><br>₹5,200</p>
+      </div>
+      <div>
+        <img src="kurti2.png" alt="3D Chikankari Lucknowi Kurti Pist Green">
+        <p><strong>3D Chikankari Lucknowi Kurti (Pista Green)</strong><br>₹2,950</p>
+      </div>
+      <div>
+        <img src="kurti4.png" alt="Viscose 3D Kurti Georgette Purple">
+        <p><strong>Viscose 3D Kurti – Georgette (Purple)</strong><br>₹3,900</p>
+      </div>
+      <div>
+        <img src="kurti3.png" alt="Shaded Lucknowi Mukesh Chikankari Work Kurti">
+        <p><strong>Shaded Mukesh Chikankari Viscose Kurti</strong><br>₹3,700</p>
+      </div>
     </div>
   </section>
 
   <section>
-    <h2>Best Sellers – Traditional Suits & Kurtis</h2>
+    <h2>Best Sellers – Kids Chikankari Sets</h2>
     <div class="grid">
-      <img src="poshaakh4.webp" alt="Kids Red Embroidered Suit Mumbai">
-      <img src="poshaakh5.webp" alt="Kids Green Chikankari Suit Jogeshwari">
-      <img src="poshaakh6.webp" alt="Black Gold Suit for Festival Wear Mumbai">
+      <div>
+        <img src="kids1.jpg" alt="Printed Kids Lucknowi Chikankari Set">
+        <p><strong>Printed Kids Lucknowi Set</strong><br>₹1,150</p>
+      </div>
+      <div>
+        <img src="kids2.jpg" alt="Mal Mal Kids Printed Chikankari Lucknowi Set">
+        <p><strong>Mal Mal Printed Kids Lucknowi Set</strong><br>₹1,170</p>
+      </div>
+      <div>
+        <img src="kids3.jpg" alt="Rayon Kids Chikankari Lucknow Pink Set">
+        <p><strong>Rayon Chikankari Kids Set (Pink)</strong><br>₹1,275</p>
+      </div>
     </div>
   </section>
 
@@ -208,20 +247,20 @@
   </section>
 
   <section class="testimonials">
-  <h2>Customer Reviews</h2>
-  <div class="review">
-    <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
-    <strong>– Ayesha R.</strong>
-  </div>
-  <div class="review">
-    <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
-    <strong>– Meenal S.</strong>
-  </div>
-  <div class="review">
-    <p>“Fits perfectly. Amazing stitching!”</p>
-    <strong>– Rina P.</strong>
-  </div>
-</section>
+    <h2>Customer Reviews</h2>
+    <div class="review">
+      <p>“Beautiful Lucknowi work. Great shop in Jogeshwari!”</p>
+      <strong>– Ayesha R.</strong>
+    </div>
+    <div class="review">
+      <p>“Exactly like the photo. Fast delivery in Mumbai!”</p>
+      <strong>– Meenal S.</strong>
+    </div>
+    <div class="review">
+      <p>“Fits perfectly. Amazing stitching!”</p>
+      <strong>– Rina P.</strong>
+    </div>
+  </section>
 
   <section>
     <h2>Visit or Order Online</h2>
