--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <h2>New Arrivals – Lucknowi Chikankari Suits</h2>
     <div class="grid">
       <div>
-        <img src="kurti1.png" alt="Pure Lucknowi Viscose Chikan Kurti Red">
+        <img src="Pure lucknowi viscose chikan kurti.png" alt="Pure Lucknowi Viscose Chikan Kurti Red">
         <p><strong>Pure Lucknowi Viscose Chikan Kurti (Red)</strong><br>₹2,950</p>
       </div>
       <div>
