--- a/index.html
+++ b/index.html
@@ -201,23 +201,23 @@
         <p><strong>Pure Lucknowi Viscose Chikan Kurti (Red)</strong><br>₹2,950</p>
       </div>
       <div>
-        <img src="set1.jpg" alt="Satin 3D Suit Chikankari Lucknowi">
+        <img src="Satin 3D Suit Chikankari Lucknowi.jpg" alt="Satin 3D Suit Chikankari Lucknowi">
         <p><strong>Satin 3D Suit Chikankari Lucknowi</strong><br>₹3,200</p>
       </div>
       <div>
-        <img src="bridal1.png" alt="Heavy Bridal Gharara Full Set Hand Embroidery">
+        <img src="Heavy Bridal Gharara Full Set Hand Embroidery.png" alt="Heavy Bridal Gharara Full Set Hand Embroidery">
         <p><strong>Bridal Gharara Full Set – Hand Embroidered</strong><br>₹5,200</p>
       </div>
       <div>
-        <img src="kurti2.png" alt="3D Chikankari Lucknowi Kurti Pist Green">
+        <img src="3D Chikankari Lucknowi Kurti Pist Green.png" alt="3D Chikankari Lucknowi Kurti Pist Green">
         <p><strong>3D Chikankari Lucknowi Kurti (Pista Green)</strong><br>₹2,950</p>
       </div>
       <div>
-        <img src="kurti4.png" alt="Viscose 3D Kurti Georgette Purple">
+        <img src="Viscose 3D Kurti Georgette Purple.png" alt="Viscose 3D Kurti Georgette Purple">
         <p><strong>Viscose 3D Kurti – Georgette (Purple)</strong><br>₹3,900</p>
       </div>
       <div>
-        <img src="kurti3.png" alt="Shaded Lucknowi Mukesh Chikankari Work Kurti">
+        <img src="Shaded Lucknowi Mukesh Chikankari Work Pure Viscose.png" alt="Shaded Lucknowi Mukesh Chikankari Work Kurti">
         <p><strong>Shaded Mukesh Chikankari Viscose Kurti</strong><br>₹3,700</p>
       </div>
     </div>
@@ -227,15 +227,15 @@
     <h2>Best Sellers – Kids Chikankari Sets</h2>
     <div class="grid">
       <div>
-        <img src="kids1.jpg" alt="Printed Kids Lucknowi Chikankari Set">
+        <img src="Printed Kids Lucknowi Chikankari Set.jpg" alt="Printed Kids Lucknowi Chikankari Set">
         <p><strong>Printed Kids Lucknowi Set</strong><br>₹1,150</p>
       </div>
       <div>
-        <img src="kids2.jpg" alt="Mal Mal Kids Printed Chikankari Lucknowi Set">
+        <img src="Mal Mal Kids Printed Chikankari Lucknowi Set.jpg" alt="Mal Mal Kids Printed Chikankari Lucknowi Set">
         <p><strong>Mal Mal Printed Kids Lucknowi Set</strong><br>₹1,170</p>
       </div>
       <div>
-        <img src="kids3.jpg" alt="Rayon Kids Chikankari Lucknow Pink Set">
+        <img src="Rayon Kids Chikankari Lucknow Pink Set.jpg" alt="Rayon Kids Chikankari Lucknow Pink Set">
         <p><strong>Rayon Chikankari Kids Set (Pink)</strong><br>₹1,275</p>
       </div>
     </div>
